source/sass/blocks/form.scss
.form {
  @media (max-width: $mobile-width-max) {
    padding: 40px 0;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    padding: 51px 58px;
  }

  @media (min-width: $desktop-width-min) {
    padding: 60px 100px;
  }
}

.form__main-wrapper {
  background-repeat: no-repeat;

  @media (max-width: $mobile-width-max) {
    padding: 43px 10px 40px;
    background-image:
      image-set(url("../../img/form/form-background-mobile@1x.webp") type("image/webp") 1x,
        url("../../img/form/form-background-mobile@2x.webp") type("image/webp") 2x,
        url("../../img/form/form-background-mobile@1x.jpg") type("image/jpg") 1x,
        url("../../img/form/form-background-mobile@2x.jpg") type("image/jpg") 2x);
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    border-radius: 16px;
    background-image:
      image-set(url("../../img/form/form-background-tablet@1x.webp") type("image/webp") 1x,
        url("../../img/form/form-background-tablet@2x.webp") type("image/webp") 2x,
        url("../../img/form/form-background-tablet@1x.jpg") type("image/jpg") 1x,
        url("../../img/form/form-background-tablet@2x.jpg") type("image/jpg") 2x);
  }

  @media (min-width: $desktop-width-min) {
    border-radius: 16px;
    background-image:
      image-set(url("../../img/form/form-background-desktop@1x.webp") type("image/webp") 1x,
        url("../../img/form/form-background-desktop@2x.webp") type("image/webp") 2x,
        url("../../img/form/form-background-desktop@1x.jpg") type("image/jpg") 1x,
        url("../../img/form/form-background-desktop@2x.jpg") type("image/jpg") 2x);
  }
}

.form__form {
  background-color: $accent-color;
  border-radius: 16px;
  color: $basic-light-color;

  @include flex(column, flex-start, flex-start);
  gap: 10px;

  @media (max-width: $mobile-width-max) {
    padding: 15px 15px 27px;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    padding: 40px 40px 36px;
    width: 442px;
  }

  @media (min-width: $desktop-width-min) {
    padding: 44px 70px 40px;
    width: 490px;
  }
}

.form__title {
  margin: 0;
  font-weight: 400;

  @media (max-width: $mobile-width-max) {
    font-size: 18px;
    line-height: 22px;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    margin-bottom: 21px;
    font-size: 28px;
    line-height: 28px;
  }

  @media (min-width: $desktop-width-min) {
    margin-bottom: 24px;
    font-size: 32px;
    line-height: 36px;
  }
}

.form__description {
  margin: 0;
  color: $extra-light-color;

  @media (max-width: $mobile-width-max) {
    margin-bottom: 10px;
    font-size: 14px;
    line-height: 20px;
  }

  @media (min-width: $tablet-width-min) {
    margin-bottom: 30px;
    font-size: 16px;
    line-height: 20px;
  }

  @media (min-width: $desktop-width-min) {
    line-height: 26px;
  }
}

.form__label {
  margin-bottom: 2px;
  color: rgba(240, 239, 233, 0.8);

  @media (max-width: $mobile-width-max) {
    font-size: 12px;
    line-height: 14px;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    font-size: 14px;
    line-height: 20px;
  }

  @media (min-width: $desktop-width-min) {
    font-size: 14px;
    line-height: 18px;
  }
}

.form__input {
  margin-bottom: 10px;
  padding: 17px;
  width: 100%;
  height: 50px;
  color: $basic-light-color;
  border-radius: 8px;
  border: 1px solid rgba(255, 255, 255, 0.3);
  background-color: transparent;
}

.form__input--message {
  @media (max-width: $mobile-width-max) {
    height: 94px;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    height: 88px;
  }

  @media (min-width: $desktop-width-min) {
    height: 90px;
  }
}

// кастомный select
.form__option {
  @media (max-width: $mobile-width-max) {}

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}

  @media (min-width: $desktop-width-min) {}
}

.form__input--city {
  height: 52px;
  padding: 16px 17px;

  @media (max-width: $mobile-width-max) {
    width: 260px;
  }
}

.form__custom-select {
  // display: none;
  // width: 260px;
  // padding: 16px 17px;

  // &::after {

  // }
}


// кастомный checkbox
.form__label--checkbox {
  position: relative;
  margin-left: 30px;

  @media (min-width: $tablet-width-min) {
    margin-top: 4px;
    font-size: 12px;
    line-height: 12px;
  }

  br {
    @media (min-width: $tablet-width-min) {
      display: none;
    }
  }

  &::before {
    content: "";
    display: block;
    position: absolute;
    top: 11px;
    left: -30px;
    width: 20px;
    height: 20px;
    background-color: $basic-light-color;
    border: 1px solid $basic-light-color;
    border-radius: 2px;

    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
      top: -4px;
    }

    @media (min-width: $desktop-width-min) {
      top: -3px;
    }
  }

  &::after {
    content: "";
    display: none;
    position: absolute;
    top: 6px;
    left: -33px;
    width: 10px;
    height: 10px;
    mask-image: url("/__spritemap#sprite-checked-icon-view");
    background-color: $accent-color;
    mask-size: 10px 8px;
    mask-repeat: no-repeat;

    @media (min-width: $tablet-width-min) {
      top: 2px;
      left: -25px;
    }
  }
}

.form__input-checkbox {
  display: none;
}

.form__input-checkbox:checked+.form__label--checkbox::after {
  display: block;
}

// кнопка "отправить"
.form__send {
  @media (max-width: $mobile-width-max) {
    margin-top: 8px;
    width: 260px;
    padding-left: 74px;
  }

  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
    margin-top: 32px;
    width: 352px;
    padding-left: 108px;
  }

  @media (min-width: $desktop-width-min) {
    margin-top: 32px;
    width: 100%;
    padding-left: 107px;
  }
}

